force-app/main/default/objects/Legal_Zoom__c/Legal_Zoom__c.object-meta.xml
<CustomObject>
    <label>Legal Zoom</label>
    <nameField>
        <label>Legal Zoom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Zoom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>