force-app/main/default/objects/Legal_Zoom__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Zoom</relationshipLabel>
    <relationshipName>Legal_Zoom</relationshipName>
    <type>Lookup</type>
</CustomField>