force-app/main/default/objects/Legal_Zoom__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Zoom</relationshipLabel>
    <relationshipName>Legal_Zoom</relationshipName>
    <type>Lookup</type>
</CustomField>