force-app/main/default/objects/Legal_Zoom__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>