force-app/main/default/objects/Legal_Zoom__c/fields/Date_Orders__c.field-meta.xml
<CustomField>
    <fullName>Date_Orders__c</fullName>
    <label>Date Orders</label>
    <type>DateTime</type>
</CustomField>