force-app/main/default/objects/Legal_Zoom__c/fields/EMail__c.field-meta.xml
<CustomField>
    <fullName>EMail__c</fullName>
    <label>E-Mail</label>
    <type>Email</type>
</CustomField>