force-app/main/default/objects/Legal_Zoom__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Bill62__Order__c</referenceTo>
    <relationshipLabel>Legal Zoom</relationshipLabel>
    <relationshipName>Legal_Zoom</relationshipName>
    <type>Lookup</type>
</CustomField>