force-app/main/default/objects/Legal_Zoom__c/fields/State_of_Formation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Formation__c</fullName>
    <label>State of Formation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>